--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ body {
 }
 
 .productcover {
-    border: whitesmoke solid 0.5px;
-    margin: 1% auto;
-    border-radius: 5px;
+    
+    margin: 2% auto;
+    border-radius: 5px; 
 }
 
 .main-bar {
@@ -124,7 +124,7 @@ h1 {
 
 .pot img {
     border-radius: 5% 5% 5% 5%;
-    width: 80%;
+    width: 90%;
     height: auto;
     margin: 0 10% 0 0;
     float: right;
@@ -288,24 +288,23 @@ a {
 
 .social {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
     text-align: center;
-
-
+    align-items: center;
+    justify-content: center;
 
 }
 
 
 .social a {
     color: #00aeff;
-    font-size: 4vh;
-    width: 98%;
-    border: #00aeff solid 2px;
-    margin: 1%;
+    font-size: 5vh;
+    width: 20%;
     align-content: center;
     justify-content: center;
     border-radius: 5px;
+    margin:1%;
 }
 
 
