--- a/darktheme.css
+++ b/darktheme.css
@@ -98,6 +98,10 @@
         border: whitesmoke solid 2px;
     }
 
+    .tdbloc {
+        border: whitesmoke solid 2px;
+    }
+
     .djthings img {
         border: whitesmoke solid 2px;
     }
