--- a/darktheme.css
+++ b/darktheme.css
@@ -1,22 +1,12 @@
 @media (prefers-color-scheme: dark) {
     body {
         background-color: black;
-        background-image: repeating-linear-gradient(to bottom right,
-                transparent 7px,
-                rgba(255, 255, 255, 0.8) 0.5px,
-                rgb(0, 15, 26) 1px,
-                transparent 10px);
+        background-image: black;
         color: #ccc;
     }
 
     .main-bar {
         background-color: black;
-        background-image: repeating-linear-gradient(to bottom right,
-                transparent 7px,
-                rgba(255, 255, 255, 0.8) 0.1px,
-                rgb(0, 15, 26) 0.5px,
-                transparent 11px);
-        background-size: 20%;
 
     }
 
