--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 ::selection {
-    background-color: cyan;
+    background-color: black;
     color: white;
 }
 
@@ -99,18 +99,14 @@ h1 {
 }
 
 .namesection {
-    padding: 10%;
+    padding: 20% 5%;
     margin-bottom: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
     height: auto;
     background: rgb(0, 0, 0);
-    background-image: repeating-linear-gradient(to bottom right,
-            transparent 7px,
-            rgba(255, 255, 255, 0.8) 0.5px,
-            rgb(0, 15, 26) 1px,
-            transparent 10px);
+    
 }
 
 
@@ -149,7 +145,7 @@ h1 {
     color: #002357;
     font-size: 3vh;
     margin: 0;
-
+    
 }
 
 
@@ -293,22 +289,22 @@ a {
 .social {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    text-align: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-self: center;
     justify-content: center;
+    width:50%;
 
 }
 
 
 .social a {
     color: #00aeff;
-    font-size: 5vh;
-    width: 20%;
+    width:30%;
+    font-size: 3rem;
     align-content: center;
     justify-content: center;
-    border-radius: 5px;
-    margin:1%;
+    margin:1% 10%;
+    padding: 1% 10%;
 }
 
 
