--- a/scss/responsive.css
+++ b/scss/responsive.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 1024px) {
   body {
     width: 100%;
+    padding: 30% 0;
   }
   span {
     display: none;
@@ -10,14 +11,22 @@
     width: 96%;
     height: auto;
   }
-  .vbg {
+  .nav-bar {
+    padding: 5% 0;
+    background-color: #012154;
+    color: #ffffff;
     width: 100%;
+    height: 8%;
+    position: fixed;
+    bottom: 5;
+    left: 0;
+    right: 0;
+    z-index: 5;
   }
-  .main-bar {
-    opacity: 1;
-    width: auto;
-    height: 7%;
-    margin: 0 auto;
+  .navs {
+    height: 5%;
+    margin: 3% auto;
+    padding: 2%;
     font-size: 4vh;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -31,15 +40,6 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -ms-flex-line-pack: justify;
-        align-content: space-between;
-    position: fixed;
-    border: none;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 5;
-    border-radius: 2px;
   }
   footer {
     margin: 0 0 30% 0;
