--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -1,6 +1,13 @@
+$white-color: #ffffff;
+$black-color: #000000;
+$back: whitesmoke;
+$theme: #012154;
+$themesupport: #98bfff;
+
 @media screen and (max-width: 1024px) {
 	body {
 		width: 100%;
+		padding: 30% 0;
 	}
 	span {
 		display: none;
@@ -10,28 +17,30 @@
 		width: 96%;
 		height: auto;
 	}
-	.vbg {
+
+	.nav-bar {
+		padding: 5% 0;
+		background-color: $theme;
+		color: $white-color;
 		width: 100%;
+		height:8%;
+		position: fixed;
+		bottom: 5;
+		left: 0;
+		right: 0;
+		z-index: 5;
 	}
-	.main-bar {
-		opacity: 1;
-		width: auto;
-		height: 7%;
-		margin: 0 auto;
+	.navs {
+		height: 5%;
+		margin: 3% auto;
+		padding: 2%;
 		font-size: 4vh;
 		display: flex;
 		flex-direction: row;
 		justify-content: space-around;
 		align-items: center;
-		align-content: space-between;
-		position: fixed;
-		border: none;
-		right: 0;
-		left: 0;
-		bottom: 0;
-		z-index: 5;
-		border-radius: 2px;
 	}
+
 	footer {
 		margin: 0 0 30% 0;
 	}
