--- a/scss/style.css
+++ b/scss/style.css
@@ -11,6 +11,7 @@ html {
 body {
   background: whitesmoke;
   font-family: 'Noto Sans TC', sans-serif;
+  padding: 13% 0;
 }
 
 .coversection {
@@ -23,16 +24,24 @@ body {
   margin: 1% auto;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
           box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
   padding: 2%;
-  margin: 1%;
-  border-radius: 15px 0 15px 0;
 }
 
-.main-bar {
-  opacity: 1;
-  background-color: #00c0f0;
+.nav-bar {
+  padding: 1%;
+  background-color: #012154;
   color: #ffffff;
   width: 100%;
+  height: 15%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+}
+
+.navs {
   height: 5%;
   margin: 0 auto;
   padding: 2%;
@@ -49,10 +58,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: 5;
 }
 
 .offlogo {
@@ -74,12 +79,12 @@ body {
 }
 
 .offlogo:hover + span {
-  color: #000000;
+  color: #98bfff;
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
   z-index: 5;
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .tapbut {
@@ -87,12 +92,12 @@ body {
 }
 
 .tapbut:hover + span {
-  color: #000000;
+  color: #98bfff;
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
   z-index: 5;
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .pharagraphe {
@@ -102,28 +107,13 @@ body {
           align-items: center;
 }
 
-.namesection {
-  padding: 20% 5% 5% 5%;
-  margin-bottom: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: auto;
-}
-
 .pot {
   width: 30%;
   margin: 0 auto 0 0;
 }
 
 .pot img {
-  border-radius: 5% 0% 5% 0%;
+  border-radius: 5px;
   width: 90%;
   height: auto;
   margin: 0 5% 0 0;
@@ -131,13 +121,13 @@ body {
 }
 
 .socialicon {
-  color: #00c0f0;
+  color: #012154;
   font-size: 3vh;
   margin: 0;
 }
 
 .subheading {
-  color: #00c0f0;
+  color: #012154;
   border-bottom: 3px solid #000000;
   margin: 0% 0% 3% 0%;
   font-size: 3vh;
@@ -145,7 +135,7 @@ body {
 }
 
 .subheading i {
-  color: #00c0f0;
+  color: #012154;
 }
 
 .flex {
@@ -216,9 +206,10 @@ body {
   height: auto;
   margin: 3% auto;
   bottom: 0;
-  background: #00c0f0;
-  color: #000000;
+  background: #012154;
+  color: #ffffff;
   font-weight: 500;
+  border-radius: 5px;
   bottom: 0;
   text-align: center;
   padding: 1% 1.5% 1% 1.5%;
@@ -227,8 +218,10 @@ body {
 }
 
 .btn:hover {
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
   background: #000000;
-  color: #ffffff;
+  color: #98bfff;
 }
 
 span {
@@ -243,12 +236,12 @@ span {
 }
 
 h1 {
-  color: #000000;
-  padding: 3%;
-  font-size: 7vh;
-  line-height: 7vh;
+  color: #98bfff;
+  font-size: 2vh;
   text-align: center;
   font-weight: 400;
+  margin: 0;
+  background-color: #012154;
 }
 
 h2 {
@@ -314,7 +307,7 @@ a {
 }
 
 .social a {
-  color: #00c0f0;
+  color: #012154;
   width: 30%;
   font-size: 3rem;
   -ms-flex-line-pack: center;
@@ -326,13 +319,6 @@ a {
   padding: 1% 10%;
 }
 
-video {
-  width: 95%;
-  outline: none;
-  margin: 0 auto;
-  padding: 2%;
-}
-
 footer {
   margin: 5% 0 20% 0;
   height: 10%;
@@ -341,7 +327,7 @@ footer {
 }
 
 footer a {
-  color: #00c0f0;
+  color: #012154;
   text-decoration: none;
   margin-bottom: 10%;
 }
@@ -374,22 +360,24 @@ li li {
 
 .wpbloc {
   width: 30%;
-  padding: 0.5%;
   margin: 0.5%;
-  border: #000000 solid 2px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
 .wpbloc img {
   width: 100%;
   height: auto;
+  border-radius: 3px;
 }
 
 .tdbloc {
   width: 73%;
   padding: 0.5%;
   margin: 0.5%;
-  border: #000000 solid 2px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
@@ -425,14 +413,9 @@ li li {
 
 .djthings img {
   width: 30%;
-  padding: 0.5%;
-  margin: 0.5%;
-  border: #000000 solid 2px;
+  margin: 1%;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-}
-
-.djlogo {
-  width: 20%;
-  margin: 0 auto;
 }
 /*# sourceMappingURL=style.css.map */
