--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 $white-color: #ffffff;
 $black-color: #000000;
 $back: whitesmoke;
-$theme: #00c0f0;
+$theme: #012154;
+$themesupport: #98bfff;
 
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
@@ -17,6 +18,7 @@ html {
 body {
 	background: $back;
 	font-family: 'Noto Sans TC', sans-serif;
+	padding: 13% 0;
 }
 .coversection {
 	width: 70%;
@@ -28,16 +30,24 @@ body {
 	box-shadow: 0 1px 1px rgba(0,0,0,0.08), 
                 0 2px 2px rgba(0,0,0,0.12), 
                 0 4px 4px rgba(0,0,0,0.16), 
-                0 8px 8px rgba(0,0,0,0.20);
+				0 8px 8px rgba(0,0,0,0.20);
+	border-radius: 5px;
 	padding: 2%;
-	margin:1%;
-	border-radius: 15px 0 15px 0;
+	
 }
-.main-bar {
-	opacity: 1;
+.nav-bar {
+	padding: 1%;
 	background-color: $theme;
 	color: $white-color;
 	width: 100%;
+	height:15%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 5;
+}
+.navs {
 	height: 5%;
 	margin: 0 auto;
 	padding: 2%;
@@ -46,10 +56,6 @@ body {
 	flex-direction: row;
 	justify-content: space-around;
 	align-items: center;
-	position: fixed;
-	left: 0;
-	right: 0;
-	z-index: 5;
 }
 .offlogo {
 	width: 3vh;
@@ -59,20 +65,20 @@ body {
 	justify-content: center;
 	align-items: center;
 	&:hover + span {
-		color: $black-color;
+		color: $themesupport;
 		transform: scale(1.3);
 		z-index: 5;
-		transition: all 0.5s ease-out;
+		transition: all 0.5s ease-in-out;
 
 	}
 }
 .tapbut {
 	color: $white-color;
 	&:hover + span {
-		color: $black-color;
+		color: $themesupport;
 		transform: scale(1.3);
 		z-index: 5;
-		transition: all 0.5s ease-out;
+		transition: all 0.5s ease-in-out;
 
 	}
 }
@@ -81,19 +87,12 @@ body {
 	margin: 1%;
 	align-items: center;
 }
-.namesection {
-	padding: 20% 5% 5% 5%;
-	margin-bottom: 2%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: auto;
-}
+
 .pot {
 	width: 30%;
 	margin: 0 auto 0 0;
 	img {
-		border-radius: 5% 0% 5% 0%;
+		border-radius: 5px;
 		width: 90%;
 		height: auto;
 		margin: 0 5% 0 0;
@@ -156,16 +155,18 @@ body {
 	margin: 3% auto;
 	bottom: 0;
 	background: $theme;
-	color: $black-color;
+	color: $white-color;
 	font-weight: 500;
+	border-radius: 5px;
 	bottom: 0;
 	text-align: center;
 	padding: 1% 1.5% 1% 1.5%;
 	text-align: center;
 	font-size: 2vh;
 	&:hover {
+		transition: all 0.5s ease-in;
 		background: $black-color;
-		color: $white-color;
+		color: $themesupport;
 	}
 }
 span {
@@ -176,12 +177,12 @@ span {
 	padding: 0.5% 0;
 }
 h1 {
-	color: $black-color;
-	padding: 3%;
-	font-size: 7vh;
-	line-height: 7vh;
+	color: $themesupport;
+	font-size: 2vh;
 	text-align: center;
 	font-weight: 400;
+	margin: 0;
+	background-color: $theme;
 }
 h2 {
 	font-size: 2.5vh;
@@ -238,12 +239,7 @@ a {
 		padding: 1% 10%;
 	}
 }
-video {
-	width: 95%;
-	outline: none;
-	margin: 0 auto;
-	padding: 2%;
-}
+
 footer {
 	margin: 5% 0 20% 0;
 	height: 10%;
@@ -273,20 +269,26 @@ li {
 }
 .wpbloc {
 	width: 30%;
-	padding: 0.5%;
 	margin: 0.5%;
-	border: $black-color solid 2px;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.08), 
+	0 2px 2px rgba(0,0,0,0.12), 
+	0 4px 4px rgba(0,0,0,0.16), 
+	0 8px 8px rgba(0,0,0,0.20);
 	border-radius: 5px;
 	img {
 		width: 100%;
 		height: auto;
+		border-radius: 3px;
 	}
 }
 .tdbloc {
 	width: 73%;
 	padding: 0.5%;
 	margin: 0.5%;
-	border: $black-color solid 2px;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.08), 
+	0 2px 2px rgba(0,0,0,0.12), 
+	0 4px 4px rgba(0,0,0,0.16), 
+	0 8px 8px rgba(0,0,0,0.20);
 	border-radius: 5px;
 }
 .dj {
@@ -311,13 +313,11 @@ li {
 	margin-bottom: 20%;
 	img {
 		width: 30%;
-		padding: 0.5%;
-		margin: 0.5%;
-		border: $black-color solid 2px;
+		margin: 1%;
+		box-shadow: 0 1px 1px rgba(0,0,0,0.08), 
+		0 2px 2px rgba(0,0,0,0.12), 
+		0 4px 4px rgba(0,0,0,0.16), 
+		0 8px 8px rgba(0,0,0,0.20);
 		border-radius: 5px;
 	}
-}
-.djlogo {
-	width: 20%;
-	margin: 0 auto;
 }
