--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,6 +19,7 @@ body {
 	background: $back;
 	font-family: 'Noto Sans TC', sans-serif;
 	padding: 13% 0;
+	transition: all 0.5s ease-in-out;
 }
 .coversection {
 	width: 70%;
