--- a/scss/darktheme.scss
+++ b/scss/darktheme.scss
@@ -1,5 +1,33 @@
 
 @media (prefers-color-scheme: dark) {
-	
+    $white-color: #ffffff;
+    $black-color: #000000;
+    $back: whitesmoke;
+    $theme: #012154;
+    $themesupport: #98bfff;
 
+
+    body{
+        background-color: $black-color;
+        color: $white-color;
+    }
+
+    .subheading{
+        color: $themesupport;
+        border-bottom: 3px solid $white-color;
+        i{
+            color: $themesupport;   
+        }
+    }
+
+    h1,h2,h4,h3,h5{
+        color: $white-color;
+    }
+
+    footer{
+        h4{
+            color: $white-color;
+        }
+       
+    }
 }
