--- a/scss/style.css
+++ b/scss/style.css
@@ -212,6 +212,7 @@ body {
   color: #ffffff;
   font-weight: 500;
   border-radius: 5px;
+  border: 1px solid #ffffff;
   bottom: 0;
   text-align: center;
   padding: 1% 1.5% 1% 1.5%;
