--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,6 +159,7 @@ body {
 	color: $white-color;
 	font-weight: 500;
 	border-radius: 5px;
+	border: 1px solid $white-color;
 	bottom: 0;
 	text-align: center;
 	padding: 1% 1.5% 1% 1.5%;
