--- a/scss/darktheme.css
+++ b/scss/darktheme.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #000000;
+    background-color: #191919;
     color: #ffffff;
   }
   .subheading {
@@ -15,6 +15,9 @@
   }
   footer h4 {
     color: #ffffff;
+  }
+  .detailes {
+    border-left: 2px solid #ffffff;
   }
 }
 /*# sourceMappingURL=darktheme.css.map */
