--- a/scss/darktheme.scss
+++ b/scss/darktheme.scss
@@ -1,7 +1,9 @@
 
 @media (prefers-color-scheme: dark) {
+
+
     $white-color: #ffffff;
-    $black-color: #000000;
+    $black-color: #191919;
     $back: whitesmoke;
     $theme: #012154;
     $themesupport: #98bfff;
@@ -30,4 +32,9 @@
         }
        
     }
+
+    .detailes{
+        border-left: 2px solid $white-color;
+    }
+    
 }
