--- a/scss/darktheme.css
+++ b/scss/darktheme.css
@@ -1,14 +1,14 @@
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: #191919;
+    background-color: #121212;
     color: #ffffff;
   }
   .subheading {
-    color: #98bfff;
+    color: #03f8fc;
     border-bottom: 3px solid #ffffff;
   }
   .subheading i {
-    color: #98bfff;
+    color: #03f8fc;
   }
   h1, h2, h4, h3, h5 {
     color: #ffffff;
