--- a/scss/darktheme.scss
+++ b/scss/darktheme.scss
@@ -3,10 +3,10 @@
 
 
     $white-color: #ffffff;
-    $black-color: #191919;
+    $black-color: #121212;
     $back: whitesmoke;
     $theme: #012154;
-    $themesupport: #98bfff;
+    $themesupport: #03f8fc;
 
 
     body{
