--- a/scss/style.css
+++ b/scss/style.css
@@ -23,31 +23,27 @@ body {
 }
 
 .productcover {
-  margin: 1% auto;
+  margin: 1% auto 8% auto;
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
           box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08), 0 2px 2px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.16), 0 8px 8px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 2%;
 }
 
-.nav-bar {
-  padding: 1%;
+header {
+  padding: 2% 0;
   background-color: #012154;
   color: #ffffff;
   width: 100%;
-  height: 15%;
+  height: 8%;
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
   z-index: 5;
 }
 
 .navs {
-  height: 5%;
-  margin: 0 auto;
-  padding: 2%;
-  font-size: 4vh;
+  margin: auto;
+  font-size: 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -57,9 +53,13 @@ body {
           flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navs span {
+  font-size: 0.5em;
 }
 
 .offlogo {
@@ -130,9 +130,8 @@ body {
 
 .subheading {
   color: #012154;
-  border-bottom: 3px solid #000000;
   margin: 0% 0% 3% 0%;
-  font-size: 3vh;
+  font-size: 1.5em;
   padding: 0 0 0 3%;
 }
 
@@ -190,7 +189,7 @@ body {
   position: relative;
   width: 95%;
   padding: 0.5% 0 0 1.5%;
-  border-left: 2px solid #000000;
+  border-left: 1px solid #000000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -210,13 +209,13 @@ body {
   bottom: 0;
   background: #012154;
   color: #ffffff;
-  font-weight: 500;
+  font-weight: 100;
   border-radius: 5px;
   bottom: 0;
   text-align: center;
   padding: 1% 1.5% 1% 1.5%;
   text-align: center;
-  font-size: 2vh;
+  font-size: 0.9em;
 }
 
 .btn:hover {
@@ -256,16 +255,17 @@ span {
 }
 
 h1 {
-  color: #03f8fc;
-  font-size: 2vh;
-  text-align: center;
-  font-weight: 400;
-  margin: 2% 0;
   background-color: #012154;
+  color: #03f8fc;
+  font-size: 1em;
+  text-align: center;
+  font-weight: 200;
+  padding: 2% auto;
+  margin: 1% auto;
 }
 
 h2 {
-  font-size: 2.5vh;
+  font-size: 1.3em;
   margin-left: 3%;
   color: #000000;
   margin: 0px;
@@ -273,7 +273,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2.5vh;
+  font-size: 1em;
   margin: 0px;
   color: #000000;
   margin: 0px;
@@ -281,14 +281,14 @@ h3 {
 }
 
 h4 {
-  font-size: 2vh;
+  font-size: 0.9em;
   margin: 0px;
   color: #000000;
   font-weight: 100;
 }
 
 h5 {
-  font-size: 2.5vh;
+  font-size: 0.8em;
   margin: 0px;
   font-weight: 100;
 }
@@ -297,7 +297,7 @@ p {
   text-align: center;
   color: #ffffff;
   font-weight: 100;
-  font-size: 2vh;
+  font-size: 1em;
   margin: 0px;
   color: #000000;
   margin: 0;
@@ -305,6 +305,7 @@ p {
 
 a {
   text-decoration: none;
+  font-size: 1em;
 }
 
 .social {
@@ -329,7 +330,7 @@ a {
 .social a {
   width: 50%;
   color: #012154;
-  font-size: 3rem;
+  font-size: 1em;
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-pack: center;
