--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,7 @@ body {
 	vertical-align: middle;
 }
 .productcover {
-	margin: 1% auto;
+	margin: 1% auto 8% auto;
 	box-shadow: 0 1px 1px rgba(0,0,0,0.08), 
                 0 2px 2px rgba(0,0,0,0.12), 
                 0 4px 4px rgba(0,0,0,0.16), 
@@ -37,27 +37,28 @@ body {
 	padding: 2%;
 	
 }
-.nav-bar {
-	padding: 1%;
+
+header {
+	padding: 2% 0;
 	background-color: $theme;
 	color: $white-color;
 	width: 100%;
-	height:15%;
+	height:8%;
 	position: fixed;
 	top: 0;
-	left: 0;
-	right: 0;
 	z-index: 5;
 }
 .navs {
-	height: 5%;
-	margin: 0 auto;
-	padding: 2%;
-	font-size: 4vh;
+	margin: auto;
+	font-size: 2em;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	align-items: flex-start;
+	align-items: center;
+
+	span{
+		font-size: 0.5em;	
+	}
 }
 .offlogo {
 	width: 3vh;
@@ -109,9 +110,8 @@ body {
 }
 .subheading {
 	color: $theme;
-	border-bottom: 3px solid $black-color;
 	margin: 0% 0% 3% 0%;
-	font-size: 3vh;
+	font-size: 1.5em;
 	padding: 0 0 0 3%;
 	i{
 		color: $theme;
@@ -146,7 +146,7 @@ body {
 	position: relative;
 	width: 95%;
 	padding: 0.5% 0 0 1.5%;
-	border-left: 2px solid $black-color;
+	border-left: 1px solid $black-color;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -158,13 +158,13 @@ body {
 	bottom: 0;
 	background: $theme;
 	color: $white-color;
-	font-weight: 500;
+	font-weight: 100;
 	border-radius: 5px;
 	bottom: 0;
 	text-align: center;
 	padding: 1% 1.5% 1% 1.5%;
 	text-align: center;
-	font-size: 2vh;
+	font-size: 0.9em;
 	&:hover {
 		transition: all 1s ease-in;
 		background: $black-color;
@@ -189,35 +189,37 @@ span {
 	padding: 0.5% 0;
 }
 h1 {
-	color: $themesupport;
-	font-size: 2vh;
-	text-align: center;
-	font-weight: 400;
-	margin: 2% 0;
 	background-color: $theme;
+	color: $themesupport;
+	font-size: 1em;
+	text-align: center;
+	font-weight: 200;
+	padding: 2% auto;
+	margin: 1% auto;
+
 }
 h2 {
-	font-size: 2.5vh;
+	font-size: 1.3em;
 	margin-left: 3%;
 	color: $black-color;
 	margin: 0px;
 	font-weight: 500;
 }
 h3 {
-	font-size: 2.5vh;
+	font-size: 1em;
 	margin: 0px;
 	color: $black-color;
 	margin: 0px;
 	font-weight: 300;
 }
 h4 {
-	font-size: 2vh;
+	font-size: 0.9em;
 	margin: 0px;
 	color:$black-color;
 	font-weight: 100;
 }
 h5 {
-	font-size: 2.5vh;
+	font-size: 0.8em;
 	margin: 0px;
 	font-weight: 100;
 }
@@ -225,7 +227,7 @@ p {
 	text-align: center;
 	color: $white-color;
 	font-weight: 100;
-	font-size: 2vh;
+	font-size: 1em;
 	margin: 0px;
 	color: $black-color;
 	margin: 0;
@@ -233,6 +235,7 @@ p {
 
 a {
 	text-decoration: none;
+	font-size: 1em;
 }
 .social {
 	display: flex;
@@ -244,7 +247,7 @@ a {
 	a {
 		width: 50%;
 		color: $theme;
-		font-size: 3rem;
+		font-size: 1em;
 		align-content: center;
 		justify-content: center;
 		margin: 1% 10%;
