--- a/scss/style.css
+++ b/scss/style.css
@@ -101,6 +101,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-bottom: 3%;
 }
 
 .buttonslot a {
@@ -242,7 +243,7 @@ header {
 .btn {
   width: 90%;
   height: auto;
-  margin: 1% auto;
+  margin: 3% auto;
   bottom: 0;
   background: #012154;
   color: #ffffff;
