--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,6 +100,7 @@ body {
 
 .buttonslot{
 	display: flex;
+	margin-bottom: 3%;
 	a{
 		width: 40%;
 	}
@@ -201,7 +202,7 @@ header {
 .btn {
 	width: 90%;
 	height: auto;
-	margin: 1% auto;
+	margin: 3% auto;
 	bottom: 0;
 	background: $theme;
 	color: $white-color;
