--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,12 @@ $lightcolor:#f8f8f8;
 	padding: 0;
 }
 
+
+.spinner-wrapper{
+	margin: 0;
+	text-align: center;
+}
+
 ::-webkit-scrollbar {
 	width: 20px;
   }
