--- a/scss/darktheme.css
+++ b/scss/darktheme.css
@@ -9,6 +9,9 @@
   .subheading i {
     color: #03f8fc;
   }
+  .contactbuts span {
+    color: #ffffff;
+  }
   .productcover {
     background: #121212;
   }
