--- a/scss/darktheme.scss
+++ b/scss/darktheme.scss
@@ -22,6 +22,10 @@
         }
     }
 
+    .contactbuts span {
+        color: $white-color;
+    }
+
     .productcover{
         background:$lightcolor ;
 
