--- a/scss/style.scss
+++ b/scss/style.scss
@@ -229,7 +229,7 @@ header {
 }
 
 
-span {
+.navs a span {
 	font-size: 2vh;
 	color: $white-color;
 	justify-content: center;
@@ -309,6 +309,7 @@ a {
 .contactbuts{
 	display: flex;
 	justify-content: center;
+	color: $black-color;
 	align-items: center;
 	i{
 	margin: 0% 4%;
